Fix footer mobile nav: align-items flex-start for left-aligned links

--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -277,11 +277,7 @@
   }
 
   .footer-col__nav {
-    align-items: center;
-  }
-
-  .footer-col__nav a {
-    text-align: left;
+    align-items: flex-start;
   }
 
   /* Base strip: stack and centre */
